--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/matthardwick/frontend-nanodegree-mobile-portfolio#readme",
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-image": "^2.2.0",
+    "grunt-imageoptim": "^1.4.1",
     "grunt-pagespeed": "^2.0.1",
     "load-grunt-tasks": "^3.5.2",
     "ngrok": "^2.2.2"
